--- a/jenkinsfile
+++ b/jenkinsfile
@@ -22,7 +22,7 @@ node
   
   stage('tomcat') {
 	docker stop $(docker ps -a -q --filter ancestor=tomcat)
-        docker build -t tomcat -f util_repo/docker/dockerfile .
+        docker build -t tomcat -f docker
         docker run --rm -d -p 8084:8080 tomcat
 
     }	
