--- a/jenkinsfile
+++ b/jenkinsfile
@@ -21,7 +21,8 @@ node
    }
   
   stage('tomcat') {
-	sh "docker stop $(docker ps -a -q --filter ancestor=tomcat)"
+	
+	sh url.DOCKER_TOMCAT_STOP
         sh "docker build -t tomcat -f docker"
         sh "docker run --rm -d -p 8084:8080 tomcat"
 
