--- a/jenkinsfile
+++ b/jenkinsfile
@@ -22,7 +22,7 @@ node
   
   stage('tomcat') {
 	
-	sh url.DOCKER_TOMCAT_STOP
+	sh "url.DOCKER_TOMCAT_STOP"
         sh "docker build -t tomcat -f docker"
         sh "docker run --rm -d -p 8084:8080 tomcat"
 
